# agentforge-ai-security-platform

./: .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  AUDIT.md  COST_ANALYSIS.md  Dockerfile  EVAL.md  README.md  THREAT_MODEL.md  USERS.md  pyproject.toml  render.yaml  requirements.txt
agentforge/: app.py  campaign.py  chatbot.py  config.py  core.py  deterministic.py  evaluation.py  models.py  run_campaign.py  run_evals.py  run_layer4.py  run_target_probe.py  run_threat_intel.py  storage.py  target.py
agentforge/agents/: __init__.py  documentation.py  judge.py  orchestrator.py  red_team.py  threat_intel.py
agentforge/data/: generated_threat_cases.json  rubrics.json  seed_cases.json
agentforge/data/threat_feeds/: 1df4c6da4eef.sha256  b8df5c37607d.sha256  (+7 more)
docs/: BUILD_STATE.md  ROLLBACK.md
evals/: golden_cases.json  results.example.json  results.latest.json  seed_cases.json
evals/live-evidence/: README.md  second-run-evals-2026-05-14.json  second-run-regression-replay-2026-05-14.json  second-run-smoke-campaign-2026-05-14.json  second-run-target-probe-2026-05-14.json
reports/: AF-DATA-EXFILTRATION-DE001.md  AF-DATA-EXFILTRATION-DETI146D2673.md  AF-DATA-EXFILTRATION-DETI8FB8E3CD.md  AF-DENIAL-OF-SERVICE-DOS001.md  AF-IDENTITY-ROLE-IR001.md  AF-IDENTITY-ROLE-IRTI00406E04.md  AF-IDENTITY-ROLE-IRTI36F3E8AD.md  AF-IDENTITY-ROLE-IRTIB34D43BC.md  AF-PROMPT-INJECTION-PI001.md  AF-STATE-CORRUPTION-SC001.md  AF-STATE-CORRUPTION-SCTID976ADA4.md  AF-TOOL-MISUSE-TM001.md
schemas/: campaign_brief.schema.json  verdict.schema.json
tests/: test_campaign.py
