[project]
name = "agentforge-ai-security-platform"
version = "0.1.0"
description = "Multi-agent adversarial evaluation platform for OpenEMR Clinical Co-Pilot"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "jinja2==3.1.5"
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

